[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/stopwatch/StopwatchClient.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/stopwatch/StopwatchPanel.gd" type="Script" id=2]

[node name="StopwatchPanel" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -300.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_right = 960.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopBar" type="HBoxContainer" parent="VBox"]
margin_right = 960.0
margin_bottom = 31.0
size_flags_horizontal = 3

[node name="connection_label" type="Label" parent="VBox/TopBar"]
margin_right = 86.0
margin_bottom = 31.0
size_flags_vertical = 3
text = "disconnected
"
align = 1
valign = 1

[node name="hostname_edit" type="LineEdit" parent="VBox/TopBar"]
margin_left = 90.0
margin_right = 190.0
margin_bottom = 31.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3
text = "127.0.0.1"

[node name="connect_button" type="Button" parent="VBox/TopBar"]
margin_left = 194.0
margin_right = 274.0
margin_bottom = 31.0
rect_min_size = Vector2( 80, 0 )
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplit" type="HSplitContainer" parent="VBox"]
margin_top = 35.0
margin_right = 960.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridScroll" type="ScrollContainer" parent="VBox/HSplit"]
margin_right = 679.0
margin_bottom = 205.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Grid" type="GridContainer" parent="VBox/HSplit/GridScroll"]
margin_right = 679.0
margin_bottom = 205.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7
columns = 7

[node name="EnableLabel" type="Label" parent="VBox/HSplit/GridScroll/Grid"]
margin_right = 50.0
margin_bottom = 14.0
text = "Enabled"

[node name="ResetLabel" type="Label" parent="VBox/HSplit/GridScroll/Grid"]
margin_left = 54.0
margin_right = 54.0
margin_bottom = 14.0

[node name="NameLabel" type="Label" parent="VBox/HSplit/GridScroll/Grid"]
margin_left = 58.0
margin_right = 96.0
margin_bottom = 14.0
text = "Name"

[node name="MinLabel" type="Label" parent="VBox/HSplit/GridScroll/Grid"]
margin_left = 100.0
margin_right = 151.0
margin_bottom = 14.0
text = "Min (us)"

[node name="MaxLabel" type="Label" parent="VBox/HSplit/GridScroll/Grid"]
margin_left = 155.0
margin_right = 208.0
margin_bottom = 14.0
text = "Max (us)"

[node name="MeanLabel" type="Label" parent="VBox/HSplit/GridScroll/Grid"]
margin_left = 212.0
margin_right = 274.0
margin_bottom = 14.0
text = "Mean (us)"

[node name="Intervals" type="Label" parent="VBox/HSplit/GridScroll/Grid"]
margin_left = 278.0
margin_right = 334.0
margin_bottom = 14.0
text = "Intervals"

[node name="ViewportContainer" type="ViewportContainer" parent="VBox/HSplit"]
margin_left = 691.0
margin_right = 960.0
margin_bottom = 205.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="Client" parent="." instance=ExtResource( 1 )]

[node name="CollectionTimer" type="Timer" parent="."]

[connection signal="pressed" from="VBox/TopBar/connect_button" to="." method="_on_connect_button_pressed"]
[connection signal="connected" from="Client" to="." method="_on_Client_connected"]
[connection signal="disconnected" from="Client" to="." method="_on_Client_disconnected"]
[connection signal="stopwatch_list" from="Client" to="." method="_on_Client_stopwatch_list"]
[connection signal="summary_data" from="Client" to="." method="_on_Client_summary_data"]
[connection signal="timeout" from="CollectionTimer" to="." method="_on_CollectionTimer_timeout"]
